--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "*.ino": "cpp"
     },
     "particle.firmwareVersion": "6.1.1",
-    "particle.targetPlatform": "argon"
+    "particle.targetPlatform": "argon",
+    "particle.targetDevice": ""
 }
